--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "three-stdlib": "2.7.0",
     "upath": "^1.2.0"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@yarnpkg/sdks": "^3.0.0-rc.42",
+    "typescript": "4.8.3"
+  }
 }
