--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -163,6 +163,9 @@ packageExtensions:
   app-builder-lib@23.3.1:
     dependencies:
       dmg-builder: 23.3.1
+  inquirer-press-to-continue@*:
+    dependencies:
+      string_decoder: "*"
 
 logFilters:
   - code: "YN0004"
