--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -128,6 +128,7 @@
     "object-assign": "^4.1.1",
     "prettier": "^1.19.1",
     "promise-socket": "^4.0.0",
+    "protocol": "workspace:*",
     "qbus": "^0.9.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
