--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -5,7 +5,8 @@
   "electricui-dev": true,
   "author": "michael@electricui.com",
   "license": "SEE LICENCE IN LICENCE",
-  "main": "index.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "@electricui/async-utilities": "0.9.2",
     "@electricui/core": "0.9.3",
@@ -14,7 +15,13 @@
   },
   "devDependencies": {
     "@electricui/jest-transform": "0.1.0-e7e39493f",
+    "@electricui/rollup-loader": "0.9.2",
     "@jest/globals": "^26.6.2",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^14.0.0",
+    "@rollup/plugin-run": "^2.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/pluginutils": "^4.2.1",
     "@sinonjs/fake-timers": "^6.0.1",
     "@types/bluebird": "^3.5.25",
     "@types/chai": "^4.1.7",
@@ -39,7 +46,9 @@
     "node-fetch": "^2.3.0",
     "nyc": "^13.3.0",
     "performance-now": "^2.1.0",
-    "rollup": "3.2.5",
+    "rollup": "^2.79.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-node-externals": "^5.0.0",
     "serialport": "10.4.0",
     "sinon": "^7.2.3",
     "sync-request": "^6.1.0",
@@ -49,6 +58,7 @@
     "typescript": "4.8.3"
   },
   "scripts": {
+    "build": "rollup -c",
     "test": "jest --runInBand",
     "watch": "jest --watch",
     "coverage": "jest --collectCoverage"
