--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "@yarnpkg/sdks": "^3.0.0-rc.42",
     "typescript": "4.8.3"
+  },
+  "scripts": {
+    "setup": "yarn sdks vscode"
   }
 }
