--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -11,6 +11,7 @@
     "@electricui/async-utilities": "0.9.2",
     "@electricui/core": "0.9.3",
     "@electricui/timing": "0.10.1",
+    "async-mutex": "^0.4.0",
     "debug": "^4.3.4"
   },
   "devDependencies": {
@@ -31,7 +32,7 @@
     "@types/faker": "^4.1.5",
     "@types/jest": "^26.0.15",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^16.11.7",
+    "@types/node": "^18.0.0",
     "@types/sinon": "^7.0.6",
     "@types/sinonjs__fake-timers": "^6.0.2",
     "chai": "^4.2.0",
