chore: Minor cleanup

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -16,6 +16,11 @@ packageExtensions:
     dependencies:
       core-js: "*"
       react-redux: "*"
+  "@electricui/core-timeseries@*":
+    dependencies:
+      core-js: "*"
+      redux: "*"
+      react-redux: "*"
   "@electricui/core-redux-state@*":
     dependencies:
       core-js: "*"
