--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -181,7 +181,7 @@
   "scripts": {
     "build": "electricui-build-tools app && electron-builder",
     "dev": "electricui-build-tools dev",
-    "setup": "arc install-electron",
+    "setup": "arc install-electron && yarn sdks vscode",
     "start": "electricui-build-tools dev"
   },
   "templateChannel": "latest",
