--- a/packages/headless/package.json
+++ b/packages/headless/package.json
@@ -2,25 +2,25 @@
   "arcVersionRange": ">=0.5.0",
   "author": "michael@electricui.com",
   "dependencies": {
-    "@electricui/async-utilities": "0.9.2",
-    "@electricui/core": "0.9.3",
-    "@electricui/dataflow": "0.10.1",
-    "@electricui/protocol-binary": "0.9.3",
-    "@electricui/protocol-binary-cobs": "0.9.3",
-    "@electricui/protocol-binary-codecs": "0.10.1",
-    "@electricui/protocol-binary-connection-handshake": "0.9.3",
-    "@electricui/protocol-binary-constants": "0.10.1",
-    "@electricui/protocol-binary-fifo-queue": "0.9.3",
-    "@electricui/protocol-binary-heartbeats": "0.9.3",
-    "@electricui/protocol-binary-large-packet-handler": "0.9.3",
-    "@electricui/rollup-loader": "0.9.2",
-    "@electricui/script-utilities": "0.1.1",
-    "@electricui/timeseries": "0.10.1",
-    "@electricui/timing": "0.10.1",
-    "@electricui/transport-node-serial": "0.9.3",
-    "@electricui/transport-node-usb-discovery": "0.9.3",
-    "@electricui/transport-node-websocket": "0.9.3",
-    "@electricui/utility-crc16": "0.9.1",
+    "@electricui/async-utilities": "0.9.3",
+    "@electricui/core": "0.9.5-5d1573e4a",
+    "@electricui/dataflow": "0.10.3-5d1573e4a",
+    "@electricui/protocol-binary": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-cobs": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-codecs": "0.10.3-5d1573e4a",
+    "@electricui/protocol-binary-connection-handshake": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-constants": "0.10.2",
+    "@electricui/protocol-binary-fifo-queue": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-heartbeats": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-large-packet-handler": "0.9.5-5d1573e4a",
+    "@electricui/rollup-loader": "0.9.3",
+    "@electricui/script-utilities": "0.1.3-5d1573e4a",
+    "@electricui/timeseries": "0.10.2",
+    "@electricui/timing": "0.10.2",
+    "@electricui/transport-node-serial": "0.9.5-5d1573e4a",
+    "@electricui/transport-node-usb-discovery": "0.9.5-5d1573e4a",
+    "@electricui/transport-node-websocket": "0.9.5-5d1573e4a",
+    "@electricui/utility-crc16": "0.9.2",
     "debug": "^4.3.4",
     "inquirer": "^8.2.5",
     "inquirer-press-to-continue": "^1.1.4",
@@ -61,7 +61,7 @@
   },
   "templateChannel": "latest",
   "templateName": "node",
-  "templateVersion": "0.2.0",
+  "templateVersion": "0.2.3-5d1573e4a",
   "userID": "X7x0BhRFKxAiyTqjrrJWw93UAFUMEpuBHKT6Rfw=",
   "version": "0.1.0"
 }
