--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -48,33 +48,33 @@
     "@blueprintjs/select": "^3.18.6",
     "@electricui/async-utilities": "0.9.3",
     "@electricui/build-tools": "0.11.1",
-    "@electricui/charts": "0.10.3",
-    "@electricui/components-core": "0.9.6",
-    "@electricui/components-desktop": "0.9.6",
-    "@electricui/components-desktop-blueprint": "0.9.9",
-    "@electricui/components-desktop-blueprint-loggers": "0.9.9",
-    "@electricui/components-desktop-charts": "0.10.5",
-    "@electricui/components-desktop-three": "0.9.9",
-    "@electricui/core": "0.9.4",
-    "@electricui/core-device-manager-proxy": "0.9.6",
-    "@electricui/core-redux-state": "0.9.4",
-    "@electricui/core-timeseries": "0.9.8",
-    "@electricui/dataflow": "0.10.2",
+    "@electricui/charts": "0.10.4-5d1573e4a",
+    "@electricui/components-core": "0.9.7-5d1573e4a",
+    "@electricui/components-desktop": "0.9.7-5d1573e4a",
+    "@electricui/components-desktop-blueprint": "0.9.10-5d1573e4a",
+    "@electricui/components-desktop-blueprint-loggers": "0.9.10-5d1573e4a",
+    "@electricui/components-desktop-charts": "0.10.6-5d1573e4a",
+    "@electricui/components-desktop-three": "0.9.10-5d1573e4a",
+    "@electricui/core": "0.9.5-5d1573e4a",
+    "@electricui/core-device-manager-proxy": "0.9.7-5d1573e4a",
+    "@electricui/core-redux-state": "0.9.5-5d1573e4a",
+    "@electricui/core-timeseries": "0.9.9-5d1573e4a",
+    "@electricui/dataflow": "0.10.3-5d1573e4a",
     "@electricui/loader": "0.9.3",
-    "@electricui/protocol-binary": "0.9.4",
-    "@electricui/protocol-binary-cobs": "0.9.4",
-    "@electricui/protocol-binary-codecs": "0.10.2",
-    "@electricui/protocol-binary-connection-handshake": "0.9.4",
+    "@electricui/protocol-binary": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-cobs": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-codecs": "0.10.3-5d1573e4a",
+    "@electricui/protocol-binary-connection-handshake": "0.9.5-5d1573e4a",
     "@electricui/protocol-binary-constants": "0.10.2",
-    "@electricui/protocol-binary-fifo-queue": "0.9.4",
-    "@electricui/protocol-binary-heartbeats": "0.9.4",
-    "@electricui/protocol-binary-large-packet-handler": "0.9.4",
+    "@electricui/protocol-binary-fifo-queue": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-heartbeats": "0.9.5-5d1573e4a",
+    "@electricui/protocol-binary-large-packet-handler": "0.9.5-5d1573e4a",
     "@electricui/timeseries": "0.10.2",
     "@electricui/timeseries-react": "0.9.5",
     "@electricui/timing": "0.10.2",
-    "@electricui/transport-node-serial": "0.9.4",
-    "@electricui/transport-node-usb-discovery": "0.9.4",
-    "@electricui/transport-node-websocket": "0.9.4",
+    "@electricui/transport-node-serial": "0.9.5-5d1573e4a",
+    "@electricui/transport-node-usb-discovery": "0.9.5-5d1573e4a",
+    "@electricui/transport-node-websocket": "0.9.5-5d1573e4a",
     "@electricui/utility-crc16": "0.9.2",
     "@electricui/utility-electron": "0.10.3",
     "@electricui/utility-ipc": "0.8.3",
@@ -186,7 +186,7 @@
   },
   "templateChannel": "latest",
   "templateName": "electron",
-  "templateVersion": "21.0.1",
+  "templateVersion": "21.0.2-5d1573e4a",
   "userID": "X7x0BhRFKxAiyTqjrrJWw93UAFUMEpuBHKT6Rfw=",
   "version": "0.1.0"
 }
