--- a/packages/protocol/tsconfig.json
+++ b/packages/protocol/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
+    "strict": true,
     "baseUrl": ".",
     "outDir": "./lib",
     "paths": {
